# matrix-lib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
executable/: CMakeLists.txt
include/matrix/: matrix.cpp  matrix.h
include/random/: random.cpp  random.h
include/validate/: validate.h
lib/: CMakeLists.txt
